# distribute-trade

./: .gitignore  README
client/: CDataCenter.cpp  CDataCenter.h  CMakeLists.txt  CMakeLists.txt.user.de05c84  Common.cpp  Common.h  Connection.cpp  Connection.h  client.json  main.cpp
datacenter/: CDataCenter.cpp  CDataCenter.h  CMakeLists.txt  Common.h  Connection.cpp  Connection.h  datacenters.json  main.cpp
server/: CMakeLists.txt
trade_server/: CMakeLists.txt  CTradeServer.cpp  CTradeServer.h  Common.h  Connection.cpp  Connection.h  main.cpp  trade_server.json
